src/test/ui/feature-gates/feature-gate-unsized_tuple_coercion.rs
fn main() {
    let _ : &(Send,) = &((),);
    //~^ ERROR unsized tuple coercion is not stable enough
}
